More fixes to styling, specifically when on smaller screens.

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -18,10 +18,11 @@ textarea {
 }
 
 .cm-cursorLayer, .cm-content {
-  caret-color: white!important;
+  margin-right: 4px;
+  caret-color: #ffffff!important;
 }
 
 .cm-gutters {
-  border-right: solid 1px #303030 !important;
+  border-right: solid 0px #303030 !important;
   margin-right: 5px
 }
